[package]
name = "whir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "main"

[dependencies]
ark-std = { version = "0.5", features = ["std"] }
ark-ff = { version = "0.5", features = ["asm", "std"] }
ark-serialize = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["merkle_tree"] }
ark-bn254 = "0.5.0"
ark-poly = "0.5"
ark-test-curves = { version = "0.5", features = ["bls12_381_curve"] }
derivative = { version = "2", features = ["use_core"] }
blake3 = "1.5.0"
blake2 = "0.10"
sha3 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
ruint = "1.12.3"
ruint-macro = "1.2.1"
clap = { version = "4.4.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nimue = {path = "../nimue/nimue", features = ["ark"]}
nimue-pow = {path = "../nimue/nimue-pow"}
lazy_static = "1.4"
rayon = { version = "1.10.0", optional = true }
zeroize = "1.8.1"

[profile.release]
debug = true

[features]
default = ["parallel"]
#default = []
parallel = [
    "dep:rayon",
    "ark-poly/parallel",
    "ark-ff/parallel",
    "ark-crypto-primitives/parallel",
]
rayon = ["dep:rayon"]


